updated index with module descriptions

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -56,6 +56,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -84,7 +85,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before you use any of the `wrds_` modules, you need to create a `pgpass` with your WRDS credentials. To do that, run"
+    "> Downloads and processes datasets from Wharton Research Data Services [WRDS](https://wrds-www.wharton.upenn.edu/). \n",
+    "\n",
+    "Each WRDS module handles a different library in WRDS (e.g. `compa` module for the Compustat Annual CCM file, `crspm` for the CRSP Monthly Stock file, etc.).\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before you use any of the `wrds` modules, you need to create a `pgpass` with your WRDS credentials. To do that, run"
    ]
   },
   {
@@ -182,11 +193,180 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> Downloads and processes datasets from the St. Louis [FRED](https://fred.stlouisfed.org/)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To use the functions in the `fred` module, you'll need an API key from the St. Louis FRED. \n",
     "\n",
     "Get one [here](https://fred.stlouisfed.org/docs/api/api_key.html) and store it in your environment variables under the name `FRED_API_KEY` \n",
     "\n",
     "Alternatively, you can supply the API key directly as the `api_key` parameter in each function in the `fred` module."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dtdate</th>\n",
+       "      <th>Nominal GDP</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Qdate</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1946Q1</th>\n",
+       "      <td>1946-01-01</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1946Q2</th>\n",
+       "      <td>1946-04-01</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1946Q3</th>\n",
+       "      <td>1946-07-01</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1946Q4</th>\n",
+       "      <td>1946-10-01</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1947Q1</th>\n",
+       "      <td>1947-01-01</td>\n",
+       "      <td>243.164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022Q1</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>24740.480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022Q2</th>\n",
+       "      <td>2022-04-01</td>\n",
+       "      <td>25248.476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022Q3</th>\n",
+       "      <td>2022-07-01</td>\n",
+       "      <td>25723.941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022Q4</th>\n",
+       "      <td>2022-10-01</td>\n",
+       "      <td>26137.992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023Q1</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>26529.774</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>309 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           dtdate  Nominal GDP\n",
+       "Qdate                         \n",
+       "1946Q1 1946-01-01          NaN\n",
+       "1946Q2 1946-04-01          NaN\n",
+       "1946Q3 1946-07-01          NaN\n",
+       "1946Q4 1946-10-01          NaN\n",
+       "1947Q1 1947-01-01      243.164\n",
+       "...           ...          ...\n",
+       "2022Q1 2022-01-01    24740.480\n",
+       "2022Q2 2022-04-01    25248.476\n",
+       "2022Q3 2022-07-01    25723.941\n",
+       "2022Q4 2022-10-01    26137.992\n",
+       "2023Q1 2023-01-01    26529.774\n",
+       "\n",
+       "[309 rows x 2 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fred.get_series('GDP', label='Nominal GDP')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PAPERS"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Downloads and processes datasets made available by the authors of academic papers.\n",
+    "\n",
+    "Each `papers` module handles a different paper. The naming convention is that the module's name is made up of the last names of the authors and the publication year, separated by underscores. If more than two authors, all but the first author's name is replaced by 'etal'. For example, the module for the paper “Firm-Level Political Risk: Measurement and Effects” (2019) by Tarek A. Hassan, Stephan Hollander, Laurence van Lent, Ahmed Tahoun is named `hasan_etal_2019`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['gvkey', 'date', 'date_earningscall', 'PRisk', 'NPRisk', 'Risk', 'PSentiment']"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "papers.hassan_etal_2019.variables()[:7]"
    ]
   },
   {
