--- a/nbs/00_fred/00_fred.ipynb
+++ b/nbs/00_fred/00_fred.ipynb
@@ -70,6 +70,7 @@
     "    if api_key is None: api_key = os.getenv(\"FRED_API_KEY\")\n",
     "    api = Fred(api_key=api_key)\n",
     "    freq = api.get_series_info('GDP').frequency_short \n",
+    "    time.sleep(1)\n",
     "    if label is None: label = str.lower(series)\n",
     "    df = api.get_series(series).to_frame(name=label).reset_index().rename({'index':'date'},axis=1)\n",
     "    df = pdm.setup_tseries(df, freq=freq).drop('date', axis=1)\n",
