made download and clean functions in fred for consistency

--- a/nbs/00_fred/00_fred.ipynb
+++ b/nbs/00_fred/00_fred.ipynb
@@ -61,7 +61,129 @@
    "outputs": [],
    "source": [
     "#| export \n",
-    "def get_series(series: str=None, # FRED series name\n",
+    "def download(series: str=None, # FRED series name\n",
+    "               api_key: str=None # FRED api key. If None, will use os.getenv(\"FRED_API_KEY\")\n",
+    "               ) -> pd.DataFrame: \n",
+    "    \"\"\"Retrieves series from FRED and returns it as a pd.DataFrame.\"\"\"\n",
+    "\n",
+    "    if api_key is None: api_key = os.getenv(\"FRED_API_KEY\")\n",
+    "    api = Fred(api_key=api_key)\n",
+    "    return api.get_series(series).to_frame(name=series)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GDP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1946-01-01</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1946-04-01</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1946-07-01</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1946-10-01</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1947-01-01</th>\n",
+       "      <td>243.164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>24740.480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-04-01</th>\n",
+       "      <td>25248.476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07-01</th>\n",
+       "      <td>25723.941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-01</th>\n",
+       "      <td>26137.992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-01-01</th>\n",
+       "      <td>26529.774</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>309 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  GDP\n",
+       "1946-01-01        NaN\n",
+       "1946-04-01        NaN\n",
+       "1946-07-01        NaN\n",
+       "1946-10-01        NaN\n",
+       "1947-01-01    243.164\n",
+       "...               ...\n",
+       "2022-01-01  24740.480\n",
+       "2022-04-01  25248.476\n",
+       "2022-07-01  25723.941\n",
+       "2022-10-01  26137.992\n",
+       "2023-01-01  26529.774\n",
+       "\n",
+       "[309 rows x 1 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "download('GDP')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export \n",
+    "def clean(series: str=None, # FRED series name\n",
     "               label: str=None, # Name you want to give to the series in the output DataFrame. If None, use lowercase of `series`\n",
     "               api_key: str=None # FRED api key. If None, will use os.getenv(\"FRED_API_KEY\")\n",
     "               ) -> pd.DataFrame: \n",
@@ -72,7 +194,7 @@
     "    freq = api.get_series_info('GDP').frequency_short \n",
     "    time.sleep(1)\n",
     "    if label is None: label = str.lower(series)\n",
-    "    df = api.get_series(series).to_frame(name=label).reset_index().rename({'index':'date'},axis=1)\n",
+    "    df = download(series).rename(columns={series:label}).reset_index().rename({'index':'date'},axis=1)\n",
     "    df = pdm.setup_tseries(df, freq=freq).drop('date', axis=1)\n",
     "    return df "
    ]
@@ -197,7 +319,7 @@
     }
    ],
    "source": [
-    "get_series('GDP', label='Nominal GDP')"
+    "clean('GDP', label='Nominal GDP')"
    ]
   },
   {
@@ -226,8 +348,8 @@
      "data": {
       "text/plain": [
        "id                                                                         GDP\n",
-       "realtime_start                                                      2023-07-12\n",
-       "realtime_end                                                        2023-07-12\n",
+       "realtime_start                                                      2023-07-14\n",
+       "realtime_end                                                        2023-07-14\n",
        "title                                                   Gross Domestic Product\n",
        "observation_start                                                   1947-01-01\n",
        "observation_end                                                     2023-01-01\n",
@@ -339,13 +461,13 @@
        "    <tr>\n",
        "      <th>TB3MS</th>\n",
        "      <td>3-Month Treasury Bill Secondary Market Rate, D...</td>\n",
-       "      <td>76</td>\n",
+       "      <td>77</td>\n",
        "      <td>M</td>\n",
        "      <td>1934-01-01</td>\n",
        "      <td>2023-06-01</td>\n",
        "      <td>TB3MS</td>\n",
-       "      <td>2023-07-12</td>\n",
-       "      <td>2023-07-12</td>\n",
+       "      <td>2023-07-14</td>\n",
+       "      <td>2023-07-14</td>\n",
        "      <td>Monthly</td>\n",
        "      <td>Percent</td>\n",
        "      <td>%</td>\n",
@@ -360,34 +482,34 @@
        "      <td>74</td>\n",
        "      <td>D</td>\n",
        "      <td>1954-01-04</td>\n",
-       "      <td>2023-07-11</td>\n",
+       "      <td>2023-07-12</td>\n",
        "      <td>DTB3</td>\n",
-       "      <td>2023-07-12</td>\n",
-       "      <td>2023-07-12</td>\n",
+       "      <td>2023-07-14</td>\n",
+       "      <td>2023-07-14</td>\n",
        "      <td>Daily</td>\n",
        "      <td>Percent</td>\n",
        "      <td>%</td>\n",
        "      <td>Not Seasonally Adjusted</td>\n",
        "      <td>NSA</td>\n",
-       "      <td>2023-07-12 15:19:06-05:00</td>\n",
+       "      <td>2023-07-13 15:21:13-05:00</td>\n",
        "      <td>Discount Basis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DGS3MO</th>\n",
        "      <td>Market Yield on U.S. Treasury Securities at 3-...</td>\n",
-       "      <td>72</td>\n",
+       "      <td>73</td>\n",
        "      <td>D</td>\n",
        "      <td>1981-09-01</td>\n",
-       "      <td>2023-07-11</td>\n",
+       "      <td>2023-07-12</td>\n",
        "      <td>DGS3MO</td>\n",
-       "      <td>2023-07-12</td>\n",
-       "      <td>2023-07-12</td>\n",
+       "      <td>2023-07-14</td>\n",
+       "      <td>2023-07-14</td>\n",
        "      <td>Daily</td>\n",
        "      <td>Percent</td>\n",
        "      <td>%</td>\n",
        "      <td>Not Seasonally Adjusted</td>\n",
        "      <td>NSA</td>\n",
-       "      <td>2023-07-12 15:19:03-05:00</td>\n",
+       "      <td>2023-07-13 15:21:10-05:00</td>\n",
        "      <td>For further information regarding treasury con...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -397,21 +519,21 @@
       "text/plain": [
        "                                                       title popularity  \\\n",
        "series id                                                                 \n",
-       "TB3MS      3-Month Treasury Bill Secondary Market Rate, D...         76   \n",
+       "TB3MS      3-Month Treasury Bill Secondary Market Rate, D...         77   \n",
        "DTB3       3-Month Treasury Bill Secondary Market Rate, D...         74   \n",
-       "DGS3MO     Market Yield on U.S. Treasury Securities at 3-...         72   \n",
+       "DGS3MO     Market Yield on U.S. Treasury Securities at 3-...         73   \n",
        "\n",
        "          frequency_short observation_start observation_end      id  \\\n",
        "series id                                                             \n",
        "TB3MS                   M        1934-01-01      2023-06-01   TB3MS   \n",
-       "DTB3                    D        1954-01-04      2023-07-11    DTB3   \n",
-       "DGS3MO                  D        1981-09-01      2023-07-11  DGS3MO   \n",
+       "DTB3                    D        1954-01-04      2023-07-12    DTB3   \n",
+       "DGS3MO                  D        1981-09-01      2023-07-12  DGS3MO   \n",
        "\n",
        "          realtime_start realtime_end frequency    units units_short  \\\n",
        "series id                                                              \n",
-       "TB3MS         2023-07-12   2023-07-12   Monthly  Percent           %   \n",
-       "DTB3          2023-07-12   2023-07-12     Daily  Percent           %   \n",
-       "DGS3MO        2023-07-12   2023-07-12     Daily  Percent           %   \n",
+       "TB3MS         2023-07-14   2023-07-14   Monthly  Percent           %   \n",
+       "DTB3          2023-07-14   2023-07-14     Daily  Percent           %   \n",
+       "DGS3MO        2023-07-14   2023-07-14     Daily  Percent           %   \n",
        "\n",
        "               seasonal_adjustment seasonal_adjustment_short  \\\n",
        "series id                                                      \n",
@@ -422,8 +544,8 @@
        "                        last_updated  \\\n",
        "series id                              \n",
        "TB3MS      2023-07-03 15:23:09-05:00   \n",
-       "DTB3       2023-07-12 15:19:06-05:00   \n",
-       "DGS3MO     2023-07-12 15:19:03-05:00   \n",
+       "DTB3       2023-07-13 15:21:13-05:00   \n",
+       "DGS3MO     2023-07-13 15:21:10-05:00   \n",
        "\n",
        "                                                       notes  \n",
        "series id                                                     \n",
@@ -506,13 +628,13 @@
        "    <tr>\n",
        "      <th>TB3MS</th>\n",
        "      <td>3-Month Treasury Bill Secondary Market Rate, D...</td>\n",
-       "      <td>76</td>\n",
+       "      <td>77</td>\n",
        "      <td>M</td>\n",
        "      <td>1934-01-01</td>\n",
        "      <td>2023-06-01</td>\n",
        "      <td>TB3MS</td>\n",
-       "      <td>2023-07-12</td>\n",
-       "      <td>2023-07-12</td>\n",
+       "      <td>2023-07-14</td>\n",
+       "      <td>2023-07-14</td>\n",
        "      <td>Monthly</td>\n",
        "      <td>Percent</td>\n",
        "      <td>%</td>\n",
@@ -527,28 +649,28 @@
        "      <td>74</td>\n",
        "      <td>D</td>\n",
        "      <td>1954-01-04</td>\n",
-       "      <td>2023-07-11</td>\n",
+       "      <td>2023-07-12</td>\n",
        "      <td>DTB3</td>\n",
-       "      <td>2023-07-12</td>\n",
-       "      <td>2023-07-12</td>\n",
+       "      <td>2023-07-14</td>\n",
+       "      <td>2023-07-14</td>\n",
        "      <td>Daily</td>\n",
        "      <td>Percent</td>\n",
        "      <td>%</td>\n",
        "      <td>Not Seasonally Adjusted</td>\n",
        "      <td>NSA</td>\n",
-       "      <td>2023-07-12 15:19:06-05:00</td>\n",
+       "      <td>2023-07-13 15:21:13-05:00</td>\n",
        "      <td>Discount Basis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>WTB3MS</th>\n",
        "      <td>3-Month Treasury Bill Secondary Market Rate, D...</td>\n",
-       "      <td>39</td>\n",
+       "      <td>40</td>\n",
        "      <td>W</td>\n",
        "      <td>1954-01-08</td>\n",
        "      <td>2023-07-07</td>\n",
        "      <td>WTB3MS</td>\n",
-       "      <td>2023-07-12</td>\n",
-       "      <td>2023-07-12</td>\n",
+       "      <td>2023-07-14</td>\n",
+       "      <td>2023-07-14</td>\n",
        "      <td>Weekly, Ending Friday</td>\n",
        "      <td>Percent</td>\n",
        "      <td>%</td>\n",
@@ -564,21 +686,21 @@
       "text/plain": [
        "                                                       title popularity  \\\n",
        "series id                                                                 \n",
-       "TB3MS      3-Month Treasury Bill Secondary Market Rate, D...         76   \n",
+       "TB3MS      3-Month Treasury Bill Secondary Market Rate, D...         77   \n",
        "DTB3       3-Month Treasury Bill Secondary Market Rate, D...         74   \n",
-       "WTB3MS     3-Month Treasury Bill Secondary Market Rate, D...         39   \n",
+       "WTB3MS     3-Month Treasury Bill Secondary Market Rate, D...         40   \n",
        "\n",
        "          frequency_short observation_start observation_end      id  \\\n",
        "series id                                                             \n",
        "TB3MS                   M        1934-01-01      2023-06-01   TB3MS   \n",
-       "DTB3                    D        1954-01-04      2023-07-11    DTB3   \n",
+       "DTB3                    D        1954-01-04      2023-07-12    DTB3   \n",
        "WTB3MS                  W        1954-01-08      2023-07-07  WTB3MS   \n",
        "\n",
        "          realtime_start realtime_end              frequency    units  \\\n",
        "series id                                                               \n",
-       "TB3MS         2023-07-12   2023-07-12                Monthly  Percent   \n",
-       "DTB3          2023-07-12   2023-07-12                  Daily  Percent   \n",
-       "WTB3MS        2023-07-12   2023-07-12  Weekly, Ending Friday  Percent   \n",
+       "TB3MS         2023-07-14   2023-07-14                Monthly  Percent   \n",
+       "DTB3          2023-07-14   2023-07-14                  Daily  Percent   \n",
+       "WTB3MS        2023-07-14   2023-07-14  Weekly, Ending Friday  Percent   \n",
        "\n",
        "          units_short      seasonal_adjustment seasonal_adjustment_short  \\\n",
        "series id                                                                  \n",
@@ -589,7 +711,7 @@
        "                        last_updated  \\\n",
        "series id                              \n",
        "TB3MS      2023-07-03 15:23:09-05:00   \n",
-       "DTB3       2023-07-12 15:19:06-05:00   \n",
+       "DTB3       2023-07-13 15:21:13-05:00   \n",
        "WTB3MS     2023-07-10 15:17:12-05:00   \n",
        "\n",
        "                                               notes  \n",
