--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,7 +7,14 @@
    "source": [
     "# finsets\n",
     "\n",
-    "> Download and process datasets commonly used in finance research"
+    "> Download and process datasets commonly used in finance research\n",
+    "\n",
+    "Each module handles a different data source. Almost all submodules (other than utility ones) have a `download` function that downloads the raw data and a `clean` function that processes the data into a `pandas.DataFrame` having, as index, either:\n",
+    "\n",
+    "- A `pandas.Period` date reflecting the frequency of the data (for time-series datasets), or\n",
+    "- A `pandas.MultiIndex` with a panel identifier in the first dimension and a `pandas.Period` date in the second dimension (for panel datasets).\n",
+    "\n",
+    "The period date in the index will be named following the pattern `Xdate` where X is the string literal representing the frequency of the data (e.g. `Mdate` for monthly data, `Qdate` for quarterly data, `Adate` for annual data)."
    ]
   },
   {
@@ -70,6 +77,14 @@
    "outputs": [],
    "source": [
     "from finsets import fred, wrds, papers"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below, we very briefly describe each submodule. For more details, please see the documentation of each submodule (they provide a lot more functionality than presented here)."
    ]
   },
   {
@@ -245,36 +260,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1946Q1</th>\n",
-       "      <td>1946-01-01</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1946Q2</th>\n",
-       "      <td>1946-04-01</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1946Q3</th>\n",
-       "      <td>1946-07-01</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1946Q4</th>\n",
-       "      <td>1946-10-01</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1947Q1</th>\n",
-       "      <td>1947-01-01</td>\n",
-       "      <td>243.164</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2022Q1</th>\n",
        "      <td>2022-01-01</td>\n",
        "      <td>24740.480</td>\n",
@@ -301,25 +286,16 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>309 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "           dtdate  Nominal GDP\n",
        "Qdate                         \n",
-       "1946Q1 1946-01-01          NaN\n",
-       "1946Q2 1946-04-01          NaN\n",
-       "1946Q3 1946-07-01          NaN\n",
-       "1946Q4 1946-10-01          NaN\n",
-       "1947Q1 1947-01-01      243.164\n",
-       "...           ...          ...\n",
        "2022Q1 2022-01-01    24740.480\n",
        "2022Q2 2022-04-01    25248.476\n",
        "2022Q3 2022-07-01    25723.941\n",
        "2022Q4 2022-10-01    26137.992\n",
-       "2023Q1 2023-01-01    26529.774\n",
-       "\n",
-       "[309 rows x 2 columns]"
+       "2023Q1 2023-01-01    26529.774"
       ]
      },
      "execution_count": null,
@@ -328,7 +304,7 @@
     }
    ],
    "source": [
-    "fred.get_series('GDP', label='Nominal GDP')"
+    "fred.clean('GDP', label='Nominal GDP').tail()"
    ]
   },
   {
