cleaned up readme

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -5,8 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# finsets\n",
-    "\n",
+    "# finsets"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "> Download and process datasets commonly used in finance research\n",
     "\n",
     "Each module handles a different data source. Almost all submodules (other than utility ones) have a `download` function that downloads the raw data and a `clean` function that processes the data into a `pandas.DataFrame` having, as index, either:\n",
