--- a/nbs/01_wrds/00_wrds_api.ipynb
+++ b/nbs/01_wrds/00_wrds_api.ipynb
@@ -727,7 +727,9 @@
     "        if wrds_username is None: wrds_username = input(\"Enter your WRDS username: \") \n",
     "\n",
     "    with Connection(wrds_username = wrds_username) as db:\n",
-    "        return db.raw_sql(sql=sql_string, params=params)"
+    "        df = db.raw_sql(sql=sql_string, params=params)\n",
+    "        db.close()\n",
+    "    return df"
    ]
   },
   {
