--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -33,6 +33,8 @@
    "outputs": [],
    "source": [
     "#|exports\n",
+    "from __future__ import annotations\n",
+    "from pathlib import Path\n",
     "from typing import List\n",
     "\n",
     "import pandas as pd\n",
@@ -40,6 +42,286 @@
     "\n",
     "import pandasmore as pdm\n",
     "from finsets.wrds import wrds_api"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Variable Name</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GVKEY</td>\n",
+       "      <td>string</td>\n",
+       "      <td>GVKEY -- Global Company Key (GVKEY)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CONM</td>\n",
+       "      <td>string</td>\n",
+       "      <td>Company Name (CONM)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TIC</td>\n",
+       "      <td>string</td>\n",
+       "      <td>Ticker Symbol (TIC)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CUSIP</td>\n",
+       "      <td>string</td>\n",
+       "      <td>CUSIP (CUSIP)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CIK</td>\n",
+       "      <td>string</td>\n",
+       "      <td>CIK Number (CIK)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>969</th>\n",
+       "      <td>PRCH_C</td>\n",
+       "      <td>double</td>\n",
+       "      <td>PRCH_C -- Price High - Annual - Calendar (PRCH_C)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>970</th>\n",
+       "      <td>PRCH_F</td>\n",
+       "      <td>double</td>\n",
+       "      <td>PRCH_F -- Price High - Annual - Fiscal (PRCH_F)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>971</th>\n",
+       "      <td>PRCL_C</td>\n",
+       "      <td>double</td>\n",
+       "      <td>PRCL_C -- Price Low - Annual - Calendar (PRCL_C)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>972</th>\n",
+       "      <td>PRCL_F</td>\n",
+       "      <td>double</td>\n",
+       "      <td>PRCL_F -- Price Low - Annual - Fiscal (PRCL_F)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>973</th>\n",
+       "      <td>SICH</td>\n",
+       "      <td>double</td>\n",
+       "      <td>SICH -- Standard Industrial Classification - H...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>974 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Variable Name    Type                                        Description\n",
+       "0          GVKEY   string                GVKEY -- Global Company Key (GVKEY)\n",
+       "1           CONM   string                                Company Name (CONM)\n",
+       "2            TIC   string                                Ticker Symbol (TIC)\n",
+       "3          CUSIP   string                                      CUSIP (CUSIP)\n",
+       "4            CIK   string                                   CIK Number (CIK)\n",
+       "..            ...     ...                                                ...\n",
+       "969        PRCH_C  double  PRCH_C -- Price High - Annual - Calendar (PRCH_C)\n",
+       "970        PRCH_F  double    PRCH_F -- Price High - Annual - Fiscal (PRCH_F)\n",
+       "971        PRCL_C  double   PRCL_C -- Price Low - Annual - Calendar (PRCL_C)\n",
+       "972        PRCL_F  double     PRCL_F -- Price Low - Annual - Fiscal (PRCL_F)\n",
+       "973         SICH   double  SICH -- Standard Industrial Classification - H...\n",
+       "\n",
+       "[974 rows x 3 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../../resources/compa_variable_descriptions.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export \n",
+    "def metadata(rawfile: str|Path='../../resources/compa_variable_descriptions.csv', # location of the raw metadata file\n",
+    "             outfile: str|Path='../../metadata/compa_variable_labels_types.pkl', # where to save the cleaned metadata file \n",
+    "             ) -> pd.DataFrame:\n",
+    "\n",
+    "    df = pd.read_csv(rawfile)\n",
+    "    df['Variable Label'] = df.apply(lambda row: row['Description'].replace(row['Variable Name'].strip()+' -- ', ''), axis=1)\n",
+    "    df['Variable Label'] = df.apply(lambda row: row['Variable Label'].replace( '(' + row['Variable Name'].strip() + ')', ''), axis=1)\n",
+    "    df['Variable Name'] = df['Variable Name'].str.strip().str.lower()\n",
+    "    df = df[['Variable Name', 'Variable Label', 'Type']].copy()\n",
+    "    df.columns = ['name','label','type']\n",
+    "    df.to_pickle(outfile)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>label</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gvkey</td>\n",
+       "      <td>Global Company Key</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>conm</td>\n",
+       "      <td>Company Name</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tic</td>\n",
+       "      <td>Ticker Symbol</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cusip</td>\n",
+       "      <td>CUSIP</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>cik</td>\n",
+       "      <td>CIK Number</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>969</th>\n",
+       "      <td>prch_c</td>\n",
+       "      <td>Price High - Annual - Calendar</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>970</th>\n",
+       "      <td>prch_f</td>\n",
+       "      <td>Price High - Annual - Fiscal</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>971</th>\n",
+       "      <td>prcl_c</td>\n",
+       "      <td>Price Low - Annual - Calendar</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>972</th>\n",
+       "      <td>prcl_f</td>\n",
+       "      <td>Price Low - Annual - Fiscal</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>973</th>\n",
+       "      <td>sich</td>\n",
+       "      <td>Standard Industrial Classification - Historical</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>974 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name                                             label    type\n",
+       "0     gvkey                               Global Company Key   string\n",
+       "1      conm                                     Company Name   string\n",
+       "2       tic                                    Ticker Symbol   string\n",
+       "3     cusip                                            CUSIP   string\n",
+       "4       cik                                       CIK Number   string\n",
+       "..      ...                                               ...     ...\n",
+       "969  prch_c                   Price High - Annual - Calendar   double\n",
+       "970  prch_f                     Price High - Annual - Fiscal   double\n",
+       "971  prcl_c                    Price Low - Annual - Calendar   double\n",
+       "972  prcl_f                      Price Low - Annual - Fiscal   double\n",
+       "973    sich  Standard Industrial Classification - Historical   double\n",
+       "\n",
+       "[974 rows x 3 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metadata()"
    ]
   },
   {
